# routes/index.js
@@ -4,12 +4,12 @@ const passport = require("passport");
 router.use('/', require('./swagger'));
 
 router.get("/", (req, res) => {
-//#swagger.tags = ['Welcome to the Students API server']
-  res.send("Welcome to the Students API server");
+//#swagger.tags = ['Welcome to the Library Management API server']
+  res.send("Welcome to the Library Management API server");
 });
 
-router.use("/students", require("./students"));
-router.use("/courses", require("./courses"));
+router.use("/books", require("./books"));
+router.use("/authors", require("./authors"));
 
 router.get('/login', passport.authenticate('github'), (req, res) => {
   // Optional callback after authentication is triggered
