# swagger.json
@@ -1,20 +1,21 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Students API",
-    "description": "Students API",
+    "title": "Library Management API",
+    "description": "Library Management API",
     "version": "1.0.0"
   },
-  "host": "cse341-project02-w8gf.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
+    "http",
     "https"
   ],
   "paths": {
     "/": {
       "get": {
         "tags": [
-          "Welcome to the Students API server"
+          "Welcome to the Library Management API server"
         ],
         "description": "",
         "responses": {
@@ -24,10 +25,10 @@
         }
       }
     },
-    "/students/": {
+    "/books/": {
       "get": {
         "tags": [
-          "Students"
+          "Books"
         ],
         "description": "",
         "produces": [
@@ -44,7 +45,7 @@
       },
       "post": {
         "tags": [
-          "Students"
+          "Books"
         ],
         "description": "",
         "parameters": [
@@ -54,31 +55,25 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "title": {
                   "example": "any"
                 },
-                "lastName": {
+                "author": {
                   "example": "any"
                 },
-                "email": {
+                "genre": {
                   "example": "any"
                 },
-                "birthdate": {
+                "publishedYear": {
                   "example": "any"
                 },
-                "address": {
+                "ISBN": {
                   "example": "any"
                 },
-                "phoneNumber": {
+                "copiesAvailable": {
                   "example": "any"
                 },
-                "enrollmentYear": {
-                  "example": "any"
-                },
-                "major": {
-                  "example": "any"
-                },
-                "gpa": {
+                "description": {
                   "example": "any"
                 }
               }
@@ -86,8 +81,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "412": {
             "description": "Precondition Failed"
@@ -98,10 +96,10 @@
         }
       }
     },
-    "/students/{id}": {
+    "/books/{id}": {
       "get": {
         "tags": [
-          "Students"
+          "Books"
         ],
         "description": "",
         "produces": [
@@ -132,7 +130,7 @@
       },
       "put": {
         "tags": [
-          "Students"
+          "Books"
         ],
         "description": "",
         "parameters": [
@@ -148,31 +146,25 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "title": {
                   "example": "any"
                 },
-                "lastName": {
+                "author": {
                   "example": "any"
                 },
-                "email": {
+                "genre": {
                   "example": "any"
                 },
-                "birthdate": {
+                "publishedYear": {
                   "example": "any"
                 },
-                "address": {
+                "ISBN": {
                   "example": "any"
                 },
-                "phoneNumber": {
+                "copiesAvailable": {
                   "example": "any"
                 },
-                "enrollmentYear": {
-                  "example": "any"
-                },
-                "major": {
-                  "example": "any"
-                },
-                "gpa": {
+                "description": {
                   "example": "any"
                 }
               }
@@ -180,11 +172,17 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "412": {
             "description": "Precondition Failed"
@@ -196,7 +194,7 @@
       },
       "delete": {
         "tags": [
-          "Students"
+          "Books"
         ],
         "description": "",
         "parameters": [
@@ -208,8 +206,17 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -217,10 +224,10 @@
         }
       }
     },
-    "/courses/": {
+    "/authors/": {
       "get": {
         "tags": [
-          "Courses"
+          "Authors"
         ],
         "description": "",
         "produces": [
@@ -237,7 +244,7 @@
       },
       "post": {
         "tags": [
-          "Courses"
+          "Authors"
         ],
         "description": "",
         "parameters": [
@@ -247,16 +254,16 @@
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
+                "name": {
                   "example": "any"
                 },
-                "description": {
+                "birthdate": {
                   "example": "any"
                 },
-                "credits": {
+                "nationality": {
                   "example": "any"
                 },
-                "teacherName": {
+                "biography": {
                   "example": "any"
                 }
               }
@@ -264,8 +271,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "412": {
             "description": "Precondition Failed"
@@ -276,10 +286,10 @@
         }
       }
     },
-    "/courses/{id}": {
+    "/authors/{id}": {
       "get": {
         "tags": [
-          "Courses"
+          "Authors"
         ],
         "description": "",
         "produces": [
@@ -310,7 +320,7 @@
       },
       "put": {
         "tags": [
-          "Courses"
+          "Authors"
         ],
         "description": "",
         "parameters": [
@@ -326,16 +336,16 @@
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
+                "name": {
                   "example": "any"
                 },
-                "description": {
+                "birthdate": {
                   "example": "any"
                 },
-                "credits": {
+                "nationality": {
                   "example": "any"
                 },
-                "teacherName": {
+                "biography": {
                   "example": "any"
                 }
               }
@@ -343,11 +353,17 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "412": {
             "description": "Precondition Failed"
@@ -359,7 +375,7 @@
       },
       "delete": {
         "tags": [
-          "Courses"
+          "Authors"
         ],
         "description": "",
         "parameters": [
@@ -371,8 +387,17 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
